--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
         <label>First Name: <input type="text" name="first_name_field" placeholder="Enter your first name"></label>
       </div>
       <div>
-        <label>Last Name: <input type="text" name="last_name_field" placeholder="Enter yout last name"></label>
+        <label>Last Name: <input type="text" name="last_name_field" placeholder="Enter your last name"></label>
+      </div>
+      <div>
+        <label>Phone Number: <input type="text" name="phone_field" placeholder="Enter your phone number"></label>
+      </div>
+      <div>
+        <label>Email Address: <input type="text" name="email_field" placeholer="Enter your email address"></label>
       </div>
     </fieldset>
   </form>
