--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <form method="POST" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
     <fieldset>
-      <legend>My Info</legend>
+      <legend><strong>My Info</strong></legend>
       
       <div>
         <label>First Name: <input type="text" name="first_name_field"></label>
@@ -51,10 +51,9 @@
         </select>
       </div>
     </fieldset>
-    
     <fieldset>
-      <legend>My Avaliablity</legend>
-      <p>Days Avaliable: </p>
+      <legend><strong>My Avaliablity</strong></legend>
+      <p><strong>Days Avaliable: </strong></p>
           <div>
             <input type="checkbox" name="available_field[]" value="Sunday">
             <label>Sunday</label>
