removed one strong tag

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </fieldset>
     <fieldset>
       <legend><strong>My Avaliablity</strong></legend>
-      <p><strong>Days Avaliable: </strong></p>
+      <p>Days Avaliable: </p>
           <div>
             <input type="checkbox" name="available_field[]" value="Sunday">
             <label>Sunday</label>
